Bug 205468 - Incorrect previous and next buttons are disabled when starting with an image in view
Summary: Incorrect previous and next buttons are disabled when starting with an image ...
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-28 12:02 UTC by Brendon Higgins
Modified: 2012-10-19 13:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brendon Higgins 2009-08-28 12:02:50 UTC
Version:            (using KDE 4.3.0)
OS:                Linux
Installed from:    Debian testing/unstable Packages

In summary, something is screwy with the way gwenview figures out which "Next" and "Previous" buttons to enable when it first starts up with an image file (not browsing).

Examples: Start dolphin (or do this on the command line) and, in a folder that has only images, open gwenview to view the first of those images. When gwenview starts, the "Previous" button will be enabled (but won't work) and the "Next" button will be disabled (so you can't use it).

If you do the same in a folder that has some files listed before the first image that gwenview can read, then gwenview will have both buttons enabled. If you then go "Next" and then "Previous", gwenview seems to recognise that there are no images before the current one that it can read, and disables the "Previous" button (as it should).

If you open the last image in a folder in gwenview, both "Previous" and "Next" buttons are enabled, but "Next" doesn't do anything. Go "Previous" then "Next", and the "Next" button will be disabled as it should be.
Comment 1 FiNeX 2009-08-28 22:21:25 UTC
Confirmed in trunk.
Comment 2 Aurelien Gateau 2009-09-26 00:53:23 UTC
SVN commit 1028125 by gateau:

Update previous/next action when dir has been fully listed

BUG:205468

 M  +4 -8      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028125
Comment 3 Aurelien Gateau 2009-09-26 01:09:45 UTC
SVN commit 1028132 by gateau:

Update previous/next action when dir has been fully listed

BUG:205468

 M  +4 -8      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028132