Update previous/next action when dir has been fully listed

BUG:205468

svn path=/branches/KDE/4.3/kdegraphics/gwenview/; revision=1028125